[package]
name = "MDNR_Map_Downloader_RS"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
httpdate = "1.0.3"
image = "0.25.10"
image-merger = "1.1.2"
rand = "0.10.1"
reqwest = { version = "0.13.4", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
zip = "8.6.0"
